fixed table alignment close #48

--- a/vignettes/css/style.css
+++ b/vignettes/css/style.css
@@ -2,10 +2,8 @@ body {
   font-family: Helvetica, arial, sans-serif;
   font-size: 14px;
   line-height: 1.6;
-  padding-top: 10px;
-  padding-bottom: 10px; 
   background-color: white;
-  padding: 40px; }
+  padding: 8%; }
 
 body > *:first-child {
   margin-top: 0 !important; }
@@ -77,7 +75,8 @@ h2 {
   color: black; }
 
 h3 {
-  font-size: 18px; }
+  font-size: 18px; 
+}
 
 h4 {
   font-size: 16px; 
@@ -94,10 +93,14 @@ h6 {
   font-size: 14px; 
   }
 
-h3 ~ *:not(h3) {
-    margin-left: 15px;
-}
 
+
+h3 {
+    margin-left: -.5em;
+}
+h2 {
+    margin-left: -.5em;
+}
 
 
 p, blockquote, ul, ol, dl, li, pre {
@@ -188,7 +191,7 @@ table th {
 
 table {
   border: none;
-  width: 80%;
+  width: 86%;
   border-collapse: collapse;
   font-size: 18px;
   line-height: 24px;
@@ -198,6 +201,8 @@ table {
   margin-left:auto; 
   margin-right:auto;
 }
+
+
 table thead {
   border-top: 1px solid #BFBEAD;
   border-bottom: 1px solid #BFBEAD;
